# rust_icu

./: .gitignore  .travis.yml  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  MODULE.bazel  Makefile  README.md  WORKSPACE  lib_68.rs
.cargo/: config.toml
.github/workflows/: buildenv.yml  main.yaml  test.yml
coverage/: report.md  ubrk_all.txt  ubrk_implemented.txt  ucal_all.txt  ucal_implemented.txt  uchar_all.txt  uchar_implemented.txt  ucol_all.txt  ucol_implemented.txt  udat_all.txt  udat_implemented.txt  udata_all.txt  udata_implemented.txt  uenum_all.txt  uenum_implemented.txt  uformattable_all.txt  uformattable_implemented.txt  ulistformatter_all.txt  ulistformatter_implemented.txt  uloc_all.txt  uloc_implemented.txt  umsg_all.txt  umsg_implemented.txt  unorm2_all.txt  unorm2_implemented.txt  unum_all.txt  unum_implemented.txt  unumberformatter_all.txt  unumberformatter_implemented.txt  upluralrules_all.txt  upluralrules_implemented.txt  ures_all.txt  ures_implemented.txt  ustring_all.txt  ustring_implemented.txt  utext_all.txt  utext_implemented.txt  utrans_all.txt  utrans_implemented.txt
docs/: README.md  releasing.md
ecma402_traits/: Cargo.toml
ecma402_traits/src/: collator.rs  datetimeformat.rs  displaynames.rs  lib.rs  listformat.rs  numberformat.rs  pluralrules.rs  relativetime.rs
examples/hello_world/: Cargo.toml  README.md
examples/hello_world/src/: main.rs
experimental/ecma402_listformat/: Cargo.toml
proposals/: README.md
proposals/ecma402_listformat/src/: lib.rs
rust_icu/: Cargo.toml
rust_icu/src/: lib.rs
rust_icu_common/: Cargo.toml
rust_icu_common/src/: lib.rs
rust_icu_common/tests/: hygiene.rs
rust_icu_ecma402/: Cargo.toml
rust_icu_ecma402/src/: datetimeformat.rs  lib.rs  listformat.rs  numberformat.rs  pluralrules.rs
rust_icu_intl/: Cargo.toml
rust_icu_intl/src/: lib.rs
rust_icu_release/: Cargo.toml  README.md
rust_icu_release/src/: lib.rs
rust_icu_sys/: BUILD.bazel  Cargo.toml  README.md  build.rs
rust_icu_sys/bindgen/: lib.rs  lib_63.rs  lib_64.rs  lib_65.rs  lib_66.rs  lib_67.rs  lib_68.rs  lib_69.rs  lib_70.rs  lib_71.rs  lib_72.rs  lib_73.rs  lib_74.rs  lib_76.rs  lib_77.rs  lib_78.rs  lib_79.rs  macros.rs  run_bindgen.sh  run_bindgen_for_targets.sh
rust_icu_sys/bindgen_special/: README.md  lib_72.rs  lib_74.rs  run_bindgen.sh
rust_icu_sys/src/: lib.rs
rust_icu_ubrk/: Cargo.toml
rust_icu_ubrk/src/: lib.rs
rust_icu_ucal/: Cargo.toml
rust_icu_ucal/src/: lib.rs
rust_icu_uchar/: Cargo.toml
rust_icu_uchar/src/: lib.rs
rust_icu_ucnv/: Cargo.toml
rust_icu_ucnv/src/: lib.rs  utf8.rs
rust_icu_ucol/: Cargo.toml
rust_icu_ucol/src/: lib.rs
rust_icu_ucsdet/: Cargo.toml
rust_icu_ucsdet/src/: lib.rs
rust_icu_udat/: Cargo.toml  build.rs
rust_icu_udat/src/: lib.rs
rust_icu_udata/: Cargo.toml
rust_icu_udata/src/: lib.rs
rust_icu_uenum/: Cargo.toml
rust_icu_uenum/src/: lib.rs
rust_icu_uformattable/: Cargo.toml
rust_icu_uformattable/src/: lib.rs
rust_icu_ulistformatter/: Cargo.toml  build.rs
rust_icu_ulistformatter/src/: lib.rs
rust_icu_uloc/: Cargo.toml  build.rs
rust_icu_uloc/src/: lib.rs
rust_icu_umsg/: Cargo.toml
rust_icu_umsg/src/: lib.rs
rust_icu_unorm2/: Cargo.toml
rust_icu_unorm2/src/: lib.rs
rust_icu_unum/: Cargo.toml
rust_icu_unum/src/: lib.rs
rust_icu_unumberformatter/: Cargo.toml
rust_icu_unumberformatter/src/: lib.rs
rust_icu_upluralrules/: Cargo.toml
rust_icu_upluralrules/src/: lib.rs
rust_icu_ures/: Cargo.toml  build.rs
rust_icu_ures/src/: lib.rs
rust_icu_ures/testdata/: fr.txt  res_index.txt  root.txt
rust_icu_ustring/: Cargo.toml
rust_icu_ustring/src/: lib.rs
rust_icu_utext/: Cargo.toml
rust_icu_utext/src/: lib.rs
rust_icu_utrans/: Cargo.toml
rust_icu_utrans/src/: lib.rs
