[workspace]
members = [
  "ecma402_traits",
  "rust_icu",
  "rust_icu_common",
  "rust_icu_ecma402",
  "rust_icu_intl",
  "rust_icu_sys",
  "rust_icu_ucal",
  "rust_icu_ucol",
  "rust_icu_udat",
  "rust_icu_udata",
  "rust_icu_uenum",
  "rust_icu_uformattable",
  "rust_icu_ulistformatter",
  "rust_icu_uloc",
  "rust_icu_umsg",
  "rust_icu_unorm2",
  "rust_icu_unum",
  "rust_icu_unumberformatter",
  "rust_icu_upluralrules",
  "rust_icu_ustring",
  "rust_icu_utext",
  "rust_icu_utrans",
]
