module(
    name = "rust_icu",
    version = "6.0",
)

bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0")

# Go SDK

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(version = "1.22.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(go_deps)

bazel_dep(name = "rules_foreign_cc", version = "0.10.1")

bazel_dep(name = "toolchains_llvm", version = "1.0.0")

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    # The version can not be arbitrary. `rules_foreign_cc` does not seem to
    # work with just any version of LLVM.
    llvm_version = "15.0.6",
)

use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")
