[package]
authors = ["Google Inc."]
default-features = false
edition = "2018"
keywords = ["ecma", "ecma402", "icu", "i18n", "l10n"]
license = "Apache-2.0"
name = "ecma402_traits"
readme = "README.md"
repository = "https://github.com/google/rust_icu"
version = "0.5.0"

description = """
Rust implementation of type traits to support ECMA 402 specification in Rust.

Implementors are welcome to provide their own.

"""

[dependencies]
