[package]
authors = ["Google Inc."]
default-features = false
edition = "2018"
license = "Apache-2.0"
name = "icu"
readme = "README.md"
repository = "https://github.com/google/rust_icu"
version = "0.1.4"

description = """
Native bindings to the ICU4C library from Unicode.
"""

keywords = ["icu", "unicode", "i18n", "l10n"]

[dependencies]
anyhow = "1.0.25"
log = "0.4.6"
paste = "0.1.5"
rust_icu_common = { path = "../rust_icu_common", version = "0.1.4", default-features = false }
rust_icu_sys = { path = "../rust_icu_sys", version = "0.1.4", default-features = false }
rust_icu_ucal = { path = "../rust_icu_ucal", version = "0.1.4", default-features = false }
rust_icu_udat = { path = "../rust_icu_udat", version = "0.1.4", default-features = false }
rust_icu_udata = { path = "../rust_icu_udata", version = "0.1.4", default-features = false }
rust_icu_uenum = { path = "../rust_icu_uenum", version = "0.1.4", default-features = false }
rust_icu_uloc = { path = "../rust_icu_uloc", version = "0.1.4", default-features = false }
rust_icu_ucol = { path = "../rust_icu_ucol", version = "0.1.4", default-features = false }
rust_icu_umsg = { path = "../rust_icu_umsg", version = "0.1.4", default-features = false }
rust_icu_ustring = { path = "../rust_icu_ustring", version = "0.1.4", default-features = false }
rust_icu_utext = { path = "../rust_icu_utext", version = "0.1.4", default-features = false }
thiserror = "1.0.9"

# See the feature description in ../rust_icu_sys/Cargo.toml for details.
[features]
default = ["use-bindgen", "renaming", "icu_config"]

use-bindgen = [
  "rust_icu_common/use-bindgen",
  "rust_icu_sys/use-bindgen",
  "rust_icu_ucal/use-bindgen",
  "rust_icu_ucol/use-bindgen",
  "rust_icu_udat/use-bindgen",
  "rust_icu_udata/use-bindgen",
  "rust_icu_uenum/use-bindgen",
  "rust_icu_uloc/use-bindgen",
  "rust_icu_umsg/use-bindgen",
  "rust_icu_ustring/use-bindgen",
  "rust_icu_utext/use-bindgen",
]
renaming = [
  "rust_icu_common/renaming",
  "rust_icu_sys/renaming",
  "rust_icu_ucal/renaming",
  "rust_icu_ucol/renaming",
  "rust_icu_udat/renaming",
  "rust_icu_udata/renaming",
  "rust_icu_uenum/renaming",
  "rust_icu_uloc/renaming",
  "rust_icu_umsg/renaming",
  "rust_icu_ustring/renaming",
  "rust_icu_utext/renaming",
]
icu_config = [
  "rust_icu_common/icu_config",
  "rust_icu_sys/icu_config",
  "rust_icu_ucal/icu_config",
  "rust_icu_ucol/icu_config",
  "rust_icu_udat/icu_config",
  "rust_icu_udata/icu_config",
  "rust_icu_uenum/icu_config",
  "rust_icu_uloc/icu_config",
  "rust_icu_umsg/icu_config",
  "rust_icu_ustring/icu_config",
  "rust_icu_utext/icu_config",
]
icu_version_in_env = [
  "rust_icu_common/icu_version_in_env",
  "rust_icu_sys/icu_version_in_env",
  "rust_icu_ucal/icu_version_in_env",
  "rust_icu_ucol/icu_version_in_env",
  "rust_icu_udat/icu_version_in_env",
  "rust_icu_udata/icu_version_in_env",
  "rust_icu_uenum/icu_version_in_env",
  "rust_icu_uloc/icu_version_in_env",
  "rust_icu_umsg/icu_version_in_env",
  "rust_icu_ustring/icu_version_in_env",
  "rust_icu_utext/icu_version_in_env",
]

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "google/rust_icu" }
is-it-maintained-open-issues = { repository = "google/rust_icu" }
travis-ci = { repository = "google/rust_icu", branch = "master" }
