[package]
authors = ["Google Inc."]
edition = "2018"
license = "Apache-2.0"
name = "rust_icu"
readme = "README.md"
repository = "https://github.com/google/rust_icu"
version = "2.0.1"

description = """
Native bindings to the ICU4C library from Unicode.
"""

keywords = ["icu", "unicode", "i18n", "l10n"]

[dependencies]
anyhow = "1.0.25"
log = "0.4.6"
paste = "1.0"
rust_icu_common = { path = "../rust_icu_common", version = "2.0.1", default-features = false }
rust_icu_sys = { path = "../rust_icu_sys", version = "2.0.1", default-features = false }
rust_icu_ubrk = { path = "../rust_icu_ubrk", version = "2.0.1", default-features = false }
rust_icu_ucal = { path = "../rust_icu_ucal", version = "2.0.1", default-features = false }
rust_icu_ucol = { path = "../rust_icu_ucol", version = "2.0.1", default-features = false }
rust_icu_udat = { path = "../rust_icu_udat", version = "2.0.1", default-features = false }
rust_icu_udata = { path = "../rust_icu_udata", version = "2.0.1", default-features = false }
rust_icu_uenum = { path = "../rust_icu_uenum", version = "2.0.1", default-features = false }
rust_icu_ulistformatter = { path = "../rust_icu_ulistformatter", version = "2.0.1", default-features = false }
rust_icu_uloc = { path = "../rust_icu_uloc", version = "2.0.1", default-features = false }
rust_icu_umsg = { path = "../rust_icu_umsg", version = "2.0.1", default-features = false }
rust_icu_unorm2 = { path = "../rust_icu_unorm2", version = "2.0.1", default-features = false }
rust_icu_ustring = { path = "../rust_icu_ustring", version = "2.0.1", default-features = false }
rust_icu_utext = { path = "../rust_icu_utext", version = "2.0.1", default-features = false }
rust_icu_utrans = { path = "../rust_icu_utrans", version = "2.0.1", default-features = false }
thiserror = "1.0.9"

# See the feature description in ../rust_icu_sys/Cargo.toml for details.
[features]
default = ["use-bindgen", "renaming", "icu_config"]

use-bindgen = [
  "rust_icu_common/use-bindgen",
  "rust_icu_sys/use-bindgen",
  "rust_icu_ubrk/use-bindgen",
  "rust_icu_ucal/use-bindgen",
  "rust_icu_ucol/use-bindgen",
  "rust_icu_udat/use-bindgen",
  "rust_icu_udata/use-bindgen",
  "rust_icu_uenum/use-bindgen",
  "rust_icu_ulistformatter/use-bindgen",
  "rust_icu_uloc/use-bindgen",
  "rust_icu_umsg/use-bindgen",
  "rust_icu_unorm2/use-bindgen",
  "rust_icu_ustring/use-bindgen",
  "rust_icu_utext/use-bindgen",
  "rust_icu_utrans/use-bindgen",
]
renaming = [
  "rust_icu_common/renaming",
  "rust_icu_sys/renaming",
  "rust_icu_ubrk/renaming",
  "rust_icu_ucal/renaming",
  "rust_icu_ucol/renaming",
  "rust_icu_udat/renaming",
  "rust_icu_udata/renaming",
  "rust_icu_uenum/renaming",
  "rust_icu_ulistformatter/renaming",
  "rust_icu_uloc/renaming",
  "rust_icu_umsg/renaming",
  "rust_icu_unorm2/renaming",
  "rust_icu_ustring/renaming",
  "rust_icu_utext/renaming",
  "rust_icu_utrans/renaming",
]
icu_config = [
  "rust_icu_common/icu_config",
  "rust_icu_sys/icu_config",
  "rust_icu_ubrk/icu_config",
  "rust_icu_ucal/icu_config",
  "rust_icu_ucol/icu_config",
  "rust_icu_udat/icu_config",
  "rust_icu_udata/icu_config",
  "rust_icu_uenum/icu_config",
  "rust_icu_ulistformatter/icu_config",
  "rust_icu_uloc/icu_config",
  "rust_icu_umsg/icu_config",
  "rust_icu_unorm2/icu_config",
  "rust_icu_ustring/icu_config",
  "rust_icu_utext/icu_config",
  "rust_icu_utrans/icu_config",
]
icu_version_in_env = [
  "rust_icu_common/icu_version_in_env",
  "rust_icu_sys/icu_version_in_env",
  "rust_icu_ubrk/icu_version_in_env",
  "rust_icu_ucal/icu_version_in_env",
  "rust_icu_ucol/icu_version_in_env",
  "rust_icu_udat/icu_version_in_env",
  "rust_icu_udata/icu_version_in_env",
  "rust_icu_uenum/icu_version_in_env",
  "rust_icu_ulistformatter/icu_version_in_env",
  "rust_icu_uloc/icu_version_in_env",
  "rust_icu_umsg/icu_version_in_env",
  "rust_icu_unorm2/icu_version_in_env",
  "rust_icu_ustring/icu_version_in_env",
  "rust_icu_utext/icu_version_in_env",
  "rust_icu_utrans/icu_version_in_env",
]
icu_version_64_plus = [
  "rust_icu_common/icu_version_64_plus",
  "rust_icu_sys/icu_version_64_plus",
  "rust_icu_ubrk/icu_version_64_plus",
  "rust_icu_ucal/icu_version_64_plus",
  "rust_icu_ucol/icu_version_64_plus",
  "rust_icu_udat/icu_version_64_plus",
  "rust_icu_udata/icu_version_64_plus",
  "rust_icu_uenum/icu_version_64_plus",
  "rust_icu_ulistformatter/icu_version_64_plus",
  "rust_icu_uloc/icu_version_64_plus",
  "rust_icu_umsg/icu_version_64_plus",
  "rust_icu_unorm2/icu_version_64_plus",
  "rust_icu_ustring/icu_version_64_plus",
  "rust_icu_utext/icu_version_64_plus",
  "rust_icu_utrans/icu_version_64_plus",
]
icu_version_67_plus = [
  "rust_icu_common/icu_version_67_plus",
  "rust_icu_sys/icu_version_67_plus",
  "rust_icu_ubrk/icu_version_67_plus",
  "rust_icu_ucal/icu_version_67_plus",
  "rust_icu_ucol/icu_version_67_plus",
  "rust_icu_udat/icu_version_67_plus",
  "rust_icu_udata/icu_version_67_plus",
  "rust_icu_uenum/icu_version_67_plus",
  "rust_icu_ulistformatter/icu_version_67_plus",
  "rust_icu_uloc/icu_version_67_plus",
  "rust_icu_umsg/icu_version_67_plus",
  "rust_icu_unorm2/icu_version_67_plus",
  "rust_icu_ustring/icu_version_67_plus",
  "rust_icu_utext/icu_version_67_plus",
  "rust_icu_utrans/icu_version_67_plus",
]
icu_version_68_plus = [
  "rust_icu_common/icu_version_68_plus",
  "rust_icu_sys/icu_version_68_plus",
  "rust_icu_ubrk/icu_version_68_plus",
  "rust_icu_ucal/icu_version_68_plus",
  "rust_icu_ucol/icu_version_68_plus",
  "rust_icu_udat/icu_version_68_plus",
  "rust_icu_udata/icu_version_68_plus",
  "rust_icu_uenum/icu_version_68_plus",
  "rust_icu_ulistformatter/icu_version_68_plus",
  "rust_icu_uloc/icu_version_68_plus",
  "rust_icu_umsg/icu_version_68_plus",
  "rust_icu_unorm2/icu_version_68_plus",
  "rust_icu_ustring/icu_version_68_plus",
  "rust_icu_utext/icu_version_68_plus",
  "rust_icu_utrans/icu_version_68_plus",
]
icu_version_69_max = [
  "rust_icu_common/icu_version_69_max",
  "rust_icu_sys/icu_version_69_max",
  "rust_icu_ubrk/icu_version_69_max",
  "rust_icu_ucal/icu_version_69_max",
  "rust_icu_ucol/icu_version_69_max",
  "rust_icu_udat/icu_version_69_max",
  "rust_icu_udata/icu_version_69_max",
  "rust_icu_uenum/icu_version_69_max",
  "rust_icu_ulistformatter/icu_version_69_max",
  "rust_icu_uloc/icu_version_69_max",
  "rust_icu_umsg/icu_version_69_max",
  "rust_icu_unorm2/icu_version_69_max",
  "rust_icu_ustring/icu_version_69_max",
  "rust_icu_utext/icu_version_69_max",
  "rust_icu_utrans/icu_version_69_max",
]

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "google/rust_icu" }
is-it-maintained-open-issues = { repository = "google/rust_icu" }
travis-ci = { repository = "google/rust_icu", branch = "main" }
