[package]
edition = "2018"
name = "rust_icu_common"
version = "0.0.0"
authors = ["Google Inc."]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/google/rust_icu/rust_icu_common"

description = """
Native bindings to the ICU4C library from Unicode.

Commonly used types.
"""

keywords = ["icu", "unicode", "i18n", "l10n"]

[dependencies]
thiserror = "1.0.9"
rust_icu_sys = { path = "../rust_icu_sys", version = "0.0.0" }
