[package]
edition = "2018"
name = "rust_icu_common"
version = "0.0.4"
authors = ["Google Inc."]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/google/rust_icu"

description = """
Native bindings to the ICU4C library from Unicode.

Commonly used types.
"""
default-features = false

keywords = ["icu", "unicode", "i18n", "l10n"]

[dependencies]
thiserror = "1.0.9"

rust_icu_sys = { path = "../rust_icu_sys", version = "0.0.4", default-features = false}

# See the feature description in ../rust_icu_sys/Cargo.toml for details.
[features]
default = ["bindgen", "renaming", "icu_config"]
bindgen = ["rust_icu_sys/bindgen"]
renaming = ["rust_icu_sys/renaming"]
icu_config = ["rust_icu_sys/icu_config"]
icu_version_in_env = ["rust_icu_sys/icu_version_in_env"]

