[package]
authors = ["Google Inc."]
edition = "2018"
keywords = ["icu", "unicode", "i18n", "l10n"]
license = "Apache-2.0"
name = "rust_icu_ecma402"
readme = "README.md"
repository = "https://github.com/google/rust_icu"
version = "4.2.0"

description = """
ECMA 402 standard implementation in Rust.
"""
[dependencies]
anyhow = "1.0.25"
ecma402_traits = { path = "../ecma402_traits", version = "4.2.0" }
log = "0.4.6"
paste = "1.0"
rust_icu_common = { path = "../rust_icu_common", version = "4.2.0", default-features = false }
rust_icu_udat = { path = "../rust_icu_udat", version = "4.2.0", default-features = false }
rust_icu_sys = { path = "../rust_icu_sys", version = "4.2.0", default-features = false }
rust_icu_uloc = { path = "../rust_icu_uloc", version = "4.2.0", default-features = false }
rust_icu_ustring = { path = "../rust_icu_ustring", version = "4.2.0", default-features = false }
rust_icu_ulistformatter = { path = "../rust_icu_ulistformatter", version = "4.2.0", default-features = false }
rust_icu_upluralrules = { path = "../rust_icu_upluralrules", version = "4.2.0", default-features = false }
rust_icu_unum = { path = "../rust_icu_unum", version = "4.2.0", default-features = false }
rust_icu_unumberformatter = { path = "../rust_icu_unumberformatter", version = "4.2.0", default-features = false }

[dev-dependencies]
anyhow = "1.0.25"
regex = "1.7.0"

# See the feature description in ../rust_icu_sys/Cargo.toml for details.
[features]
default = ["use-bindgen", "renaming", "icu_config"]

use-bindgen = [
  "rust_icu_common/use-bindgen",
  "rust_icu_sys/use-bindgen",
  "rust_icu_ulistformatter/use-bindgen",
  "rust_icu_uloc/use-bindgen",
  "rust_icu_unum/use-bindgen",
  "rust_icu_unumberformatter/use-bindgen",
  "rust_icu_upluralrules/use-bindgen",
  "rust_icu_ustring/use-bindgen",
]
renaming = [
  "rust_icu_common/renaming",
  "rust_icu_sys/renaming",
  "rust_icu_ulistformatter/renaming",
  "rust_icu_uloc/renaming",
  "rust_icu_unum/renaming",
  "rust_icu_unumberformatter/renaming",
  "rust_icu_upluralrules/renaming",
  "rust_icu_ustring/renaming",
]
icu_config = [
  "rust_icu_common/icu_config",
  "rust_icu_sys/icu_config",
  "rust_icu_ulistformatter/icu_config",
  "rust_icu_uloc/icu_config",
  "rust_icu_unum/icu_config",
  "rust_icu_unumberformatter/icu_config",
  "rust_icu_upluralrules/icu_config",
  "rust_icu_ustring/icu_config",
]
icu_version_in_env = [
  "rust_icu_common/icu_version_in_env",
  "rust_icu_sys/icu_version_in_env",
  "rust_icu_ulistformatter/icu_version_in_env",
  "rust_icu_uloc/icu_version_in_env",
  "rust_icu_unum/icu_version_in_env",
  "rust_icu_unumberformatter/icu_version_in_env",
  "rust_icu_upluralrules/icu_version_in_env",
  "rust_icu_ustring/icu_version_in_env",
]
icu_version_64_plus = [
  "rust_icu_common/icu_version_64_plus",
  "rust_icu_sys/icu_version_64_plus",
  "rust_icu_ulistformatter/icu_version_64_plus",
  "rust_icu_uloc/icu_version_64_plus",
  "rust_icu_unum/icu_version_64_plus",
  "rust_icu_unumberformatter/icu_version_64_plus",
  "rust_icu_upluralrules/icu_version_64_plus",
  "rust_icu_ustring/icu_version_64_plus",
]
icu_version_67_plus = [
  "rust_icu_common/icu_version_67_plus",
  "rust_icu_sys/icu_version_67_plus",
  "rust_icu_ulistformatter/icu_version_67_plus",
  "rust_icu_uloc/icu_version_67_plus",
  "rust_icu_unum/icu_version_67_plus",
  "rust_icu_unumberformatter/icu_version_67_plus",
  "rust_icu_upluralrules/icu_version_67_plus",
  "rust_icu_ustring/icu_version_67_plus",
]
icu_version_68_plus = [
  "rust_icu_common/icu_version_68_plus",
  "rust_icu_sys/icu_version_68_plus",
  "rust_icu_ulistformatter/icu_version_68_plus",
  "rust_icu_uloc/icu_version_68_plus",
  "rust_icu_unum/icu_version_68_plus",
  "rust_icu_unumberformatter/icu_version_68_plus",
  "rust_icu_upluralrules/icu_version_68_plus",
  "rust_icu_ustring/icu_version_68_plus",
]
icu_version_69_max = [
  "rust_icu_common/icu_version_69_max",
  "rust_icu_sys/icu_version_69_max",
  "rust_icu_ulistformatter/icu_version_69_max",
  "rust_icu_uloc/icu_version_69_max",
  "rust_icu_unum/icu_version_69_max",
  "rust_icu_unumberformatter/icu_version_69_max",
  "rust_icu_upluralrules/icu_version_69_max",
  "rust_icu_ustring/icu_version_69_max",
]

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "google/rust_icu" }
is-it-maintained-open-issues = { repository = "google/rust_icu" }
travis-ci = { repository = "google/rust_icu", branch = "main" }
