[package]
authors = ["Google Inc."]
edition = "2018"
license = "Apache-2.0"
name = "rust_icu_intl"
readme = "README.md"
repository = "https://github.com/google/rust_icu"
version = "1.0.3"

description = """
Native bindings to the ICU4C library from Unicode.

umsg.h
"""

[dependencies]
anyhow = "1.0.25"
log = "0.4.6"
paste = "1.0"
rust_icu_common = { path = "../rust_icu_common", version = "1.0.3", default-features = false }
rust_icu_sys = { path = "../rust_icu_sys", version = "1.0.3", default-features = false }
rust_icu_uloc = { path = "../rust_icu_uloc", version = "1.0.3", default-features = false }
rust_icu_umsg = { path = "../rust_icu_umsg", version = "1.0.3", default-features = false }
rust_icu_ustring = { path = "../rust_icu_ustring", version = "1.0.3", default-features = false }
thiserror = "1.0.9"

# See the feature description in ../rust_icu_sys/Cargo.toml for details.
[features]
default = ["use-bindgen", "renaming", "icu_config"]

use-bindgen = [
  "rust_icu_common/use-bindgen",
  "rust_icu_sys/use-bindgen",
  "rust_icu_uloc/use-bindgen",
  "rust_icu_umsg/use-bindgen",
  "rust_icu_ustring/use-bindgen",
]
renaming = [
  "rust_icu_common/renaming",
  "rust_icu_sys/renaming",
  "rust_icu_uloc/renaming",
  "rust_icu_umsg/renaming",
  "rust_icu_ustring/renaming",
]
icu_config = [
  "rust_icu_common/icu_config",
  "rust_icu_sys/icu_config",
  "rust_icu_uloc/icu_config",
  "rust_icu_umsg/icu_config",
  "rust_icu_ustring/icu_config",
]
icu_version_in_env = [
  "rust_icu_common/icu_version_in_env",
  "rust_icu_sys/icu_version_in_env",
  "rust_icu_uloc/icu_version_in_env",
  "rust_icu_umsg/icu_version_in_env",
  "rust_icu_ustring/icu_version_in_env",
]
icu_version_64_plus = [
  "rust_icu_common/icu_version_64_plus",
  "rust_icu_sys/icu_version_64_plus",
  "rust_icu_uloc/icu_version_64_plus",
  "rust_icu_umsg/icu_version_64_plus",
  "rust_icu_ustring/icu_version_64_plus",
]
icu_version_67_plus = [
  "rust_icu_common/icu_version_67_plus",
  "rust_icu_sys/icu_version_67_plus",
  "rust_icu_uloc/icu_version_67_plus",
  "rust_icu_umsg/icu_version_67_plus",
  "rust_icu_ustring/icu_version_67_plus",
]
icu_version_68_plus = [
  "rust_icu_common/icu_version_68_plus",
  "rust_icu_sys/icu_version_68_plus",
  "rust_icu_uloc/icu_version_68_plus",
  "rust_icu_umsg/icu_version_68_plus",
  "rust_icu_ustring/icu_version_68_plus",
]
