[package]
name = "rust_icu_release"
version = "5.3.0"
edition = "2024"
authors = ["Google Inc."]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/google/rust_icu"

description = """
Release scripts for rust_icu collection of crates.
"""

keywords = ["icu", "unicode", "i18n", "l10n"]

[dependencies]
anyhow = "1.0"
