[package]
name = "rust_icu_sys"
version = "0.0.1"
authors = ["Google Inc."]
license = "Apache-2.0"
readme = "README.md"
build = "build.rs"
repository = "https://github.com/google/rust_icu/rust_icu_sys"
edition = "2018"

links = "icuuc"

description = """
Native bindings to the ICU4C library from Unicode.
"""

keywords = ["icu", "unicode", "i18n", "l10n"]

[dependencies]
libc = "0.2.14"
paste = "0.1.5"

[build-dependencies]
anyhow = "1.0"

[lib]
# Indented documentation text in the generated library is prose, not rust code.
# See https://github.com/rust-lang/rust-bindgen/issues/378
doctest = false

[features]
default = ["bindgen", "renaming", "icu_config"]

# If set, cargo will run 'bindgen' to generate bindings based on the installed
# ICU library.  The program `icu-config` must be in $PATH for this to work, and
# you also must have `bindgen`.
bindgen = []

# If set, ICU bindings are generated with version numbers appended.  This is
# called "renaming" in ICU, and is normally needed only when linking against
# specific ICU version is required.  See
# http://userguide.icu-project.org/design for a discussion of renaming.
renaming = []

# If set, the binary icu-config will be used to configure the library.  Turn
# this feature off if you do not want `build.rs` to try to autodetect the build
# environment.
icu_config = []

