[package]
name = "rust_icu_sys"
version = "5.4.0"
authors = ["Google Inc."]
license = "Apache-2.0"
readme = "README.md"
build = "build.rs"
repository = "https://github.com/google/rust_icu"
edition = "2018"

links = "icuuc"

description = """
Native bindings to the ICU4C library from Unicode.
"""

keywords = ["icu", "unicode", "i18n", "l10n"]

[dependencies]
libc = "0.2.34"
paste = "1.0"

[build-dependencies]
anyhow = "1.0.72"
bindgen = { version = "0.69.5", optional = true }
lazy_static = "1.4"
rust_icu_release = { path = "../rust_icu_release", version = "5.4.0" }

[lib]
# Indented documentation text in the generated library is prose, not rust code.
# See https://github.com/rust-lang/rust-use-bindgen/issues/378
doctest = false

# Please see https://github.com/google/rust_icu#features for the explanation
# of these features.
[features]
default = ["use-bindgen", "renaming", "icu_config"]
use-bindgen = ["bindgen"]
renaming = []
icu_config = []
icu_version_in_env = []
icu_version_64_plus = []
icu_version_67_plus = []
icu_version_68_plus = []
icu_version_69_max = []
static = []


[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "google/rust_icu" }
is-it-maintained-open-issues = { repository = "google/rust_icu" }
travis-ci = { repository = "google/rust_icu", branch = "main" }
