[package]
edition = "2018"
name = "rust_icu_ucal"
version = "0.0.0"
authors = ["Google Inc."]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/google/rust_icu/rust_icu_ucal"

description = """
Native bindings to the ICU4C library from Unicode.

ucal.h
"""

keywords = ["icu", "unicode", "i18n", "l10n"]

[dependencies]
log = "0.4.8"
paste = "0.1.5"
rust_icu_common = { path = "../rust_icu_common" }
rust_icu_sys = { path = "../rust_icu_sys" }
rust_icu_uenum = { path = "../rust_icu_uenum" }
rust_icu_ustring = { path = "../rust_icu_ustring" }
