[package]
authors = ["Google Inc."]
edition = "2018"
license = "Apache-2.0"
name = "rust_icu_udat"
readme = "README.md"
repository = "https://github.com/google/rust_icu"
version = "0.0.1"

description = """
Native bindings to the ICU4C library from Unicode.

udat.h
"""

keywords = ["icu", "unicode", "i18n", "l10n"]

[dependencies]
log = "0.4.8"
paste = "0.1.5"
rust_icu_common = { path = "../rust_icu_common", version = "0.0.1" }
rust_icu_sys = { path = "../rust_icu_sys", version = "0.0.1" }
rust_icu_ucal = { path = "../rust_icu_ucal", version = "0.0.1" }
rust_icu_uenum = { path = "../rust_icu_uenum", version = "0.0.1" }
rust_icu_uloc = { path = "../rust_icu_uloc", version = "0.0.1" }
rust_icu_ustring = { path = "../rust_icu_ustring", version = "0.0.1" }

