[package]
authors = ["Google Inc."]
edition = "2018"
license = "Apache-2.0"
name = "rust_icu_udata"
readme = "README.md"
repository = "https://github.com/google/rust_icu"
version = "4.2.1"

description = """
Native bindings to the ICU4C library from Unicode.

udata.h
"""

keywords = ["icu", "unicode", "i18n", "l10n"]

[dependencies]
log = "0.4.6"
paste = "1.0"
rust_icu_common = { path = "../rust_icu_common", version = "4.2.1", default-features = false }
rust_icu_sys = { path = "../rust_icu_sys", version = "4.2.1", default-features = false }

# See the feature description in ../rust_icu_sys/Cargo.toml for details.
[features]
default = ["use-bindgen", "renaming", "icu_config"]

use-bindgen = ["rust_icu_sys/use-bindgen", "rust_icu_common/use-bindgen"]
renaming = ["rust_icu_sys/renaming", "rust_icu_common/renaming"]
icu_config = ["rust_icu_sys/icu_config", "rust_icu_common/icu_config"]
icu_version_in_env = ["rust_icu_sys/icu_version_in_env", "rust_icu_common/icu_version_in_env"]
icu_version_64_plus = [
  "rust_icu_common/icu_version_64_plus",
  "rust_icu_sys/icu_version_64_plus",
]
icu_version_67_plus = [
  "rust_icu_common/icu_version_67_plus",
  "rust_icu_sys/icu_version_67_plus",
]
icu_version_68_plus = [
  "rust_icu_common/icu_version_68_plus",
  "rust_icu_sys/icu_version_68_plus",
]
icu_version_69_max = [
  "rust_icu_common/icu_version_69_max",
  "rust_icu_sys/icu_version_69_max",
]

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "google/rust_icu" }
is-it-maintained-open-issues = { repository = "google/rust_icu" }
travis-ci = { repository = "google/rust_icu", branch = "main" }
