[package]
authors = ["Google Inc."]
edition = "2018"
license = "Apache-2.0"
name = "rust_icu_uenum"
readme = "README.md"
repository = "https://github.com/google/rust_icu"
version = "0.0.1"

description = """
Native bindings to the ICU4C library from Unicode.

Implements `uenum.h` from the ICU4C API.
"""

keywords = ["icu", "unicode", "i18n", "l10n"]

[dependencies]
paste = "0.1.5"
rust_icu_sys = { path = "../rust_icu_sys", version = "0.0.1" }
rust_icu_common = { path = "../rust_icu_common", version = "0.0.1" }
